[package]
name = "psel"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/matijas-05/psel/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
env_logger = "0.10.1"
log = "0.4.20"
ratatui = "0.24.0"
