[package]
name = "cdp"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/matijas-05/cdp/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
ignore = "0.4.20"
num_cpus = "1.16.0"
ratatui = "0.24.0"
tui-input = "0.8.0"
